ndim-utils 0.6.x
  * one: prevent filesystem deduplication from working
  * Add --help and --version option to (almost) all executables

ndim-utils 0.6
  * Migrate to newer build-helpers/
  * Fixed and updated RPM generation
  * Install ndim-utils.sh into /etc/profile.d/ (with mkcd shell command)
  * Parallelize build system
  * Add watch-xsel script
  * params: report more details, and print to different output channels
  * Stop installing obsolete scripts (np, umlxterm, Palm Pilot stuff)
  * Add one(1) man page

ndim-utils 0.5
  * percheck: add POSIX ACL support (--acl option)

ndim-utils 0.4.3
  * New versioning scheme using git tags.
  * Add strace-normalize script.

ndim-utils 0.2.4
  * Fix RPM creation.

ndim-utils 0.2.3
  * Add built-in RPM support.
  * Add SELinux support to percheck.
  * Avoid downloading whoislist.gz if possible.

ndim-utils 0.2.2
  * Add list-debuginfo-rpms script.

ndim-utils 0.2.1
  First release with NEWS.