@@ -4,7 +4,11 @@ CLEANFILES =
 EXTRA_DIST =
 man_MANS =
 bin_PROGRAMS =
+noinst_PROGRAMS =
+EXTRA_PROGRAMS =
 bin_SCRIPTS =
+noinst_SCRIPTS =
+EXTRA_SCRIPTS =
 dist_bin_SCRIPTS =
 
 SUBDIRS =
