@@ -10,6 +10,12 @@ URL:       @PACKAGE_URL@
 Source0:   @distdir@.tar.xz
 
 
+%package xnest
+Summary:   Xnest helper scripts
+Group:     Applications/X11
+BuildArch: noarch
+
+
 %package xsel
 Summary:   xsel related scripts
 Group:     Applications/System
@@ -40,6 +46,10 @@ BuildArch: noarch
     Analyze ppp logs from a LEAF Bering router.
 
 
+%description xnest
+Scripts related to the X11 Xnest server.
+
+
 %description xsel
 Scripts related to the X11 selection available via xsel(1).
 
@@ -56,16 +66,13 @@ make %{?_smp_mflags}
 %install
 rm -rf "%{buildroot}"
 make install DESTDIR="%{buildroot}"
+rm %{buildroot}%{_bindir}/ppp-traffic-analysis.py*
 while read file; do
-  rm -f "%{buildroot}$file"
+  rm "%{buildroot}$file"
 done<<RMXXX
    %{_bindir}/ndim-utils-info
    %{_bindir}/ndim-utils-info.sh
    %{_bindir}/ndim-utils-info2.sh
-   %{_bindir}/ppp-traffic-analysis.py
-   %{_bindir}/ppp-traffic-analysis.pyc
-   %{_bindir}/ppp-traffic-analysis.pyo
-   %{_bindir}/xnest
 RMXXX
 
 
@@ -80,14 +87,12 @@ rm -rf "%{buildroot}"
 %{_bindir}/bing
 %{_bindir}/burn-directory
 %{_bindir}/colfilter
-%{_bindir}/list-debuginfo-rpms
 %{_bindir}/one
 %{_bindir}/params-logfile
 %{_bindir}/params-stderr
 %{_bindir}/params-stdout
 %{_bindir}/pdf2minibook
 %{_bindir}/percheck
-%{_bindir}/ps2lj4
 %{_bindir}/strace-normalize
 %{_mandir}/man1/one.1.gz
 %{_mandir}/man1/percheck.1.gz
@@ -96,13 +101,22 @@ rm -rf "%{buildroot}"
 %{_mandir}/man1/params-stdout.1.gz
 
 
+%files xnest
+%defattr(-,root,root,-)
+%{_bindir}/xnest
+
+
 %files xsel
 %defattr(-,root,root,-)
 %{_bindir}/watch-xsel
 
 
 %changelog
-* Sun Dec  8 2014 Hans Ulrich Niedermann <hun@n-dimensional.de> - 0.5.23-1
+* Mon Dec  8 2014 Hans Ulrich Niedermann <hun@n-dimensional.de> - 0.6.3-1
+- Ship xnest in xnest subpackage
+- Remove obsolete ps2lj4 and list-debuginfo-rpms
+
+* Mon Dec  8 2014 Hans Ulrich Niedermann <hun@n-dimensional.de> - 0.5.23-1
 - Add xsel subpackage for watch-xsel
 
 * Sat Apr  6 2013 Hans Ulrich Niedermann <hun@n-dimensional.de> - 0.5.0-1
